Fixed some sizing issues with the grid on small screens

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -95,8 +95,7 @@ p {
 
 .main-grid {
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     margin-right: 2rem;
 }
 
